// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntegrationsStatsFilter should allow to select multiple items when isMultiple is set to true 1`] = `
Array [
  Object {
    "filters": Immutable.Map {
      "integrations": Immutable.List [
        4,
        5,
      ],
    },
    "type": "MERGE_STATS_FILTERS",
  },
]
`;

exports[`IntegrationsStatsFilter should merge stats filters on item select 1`] = `
Array [
  Object {
    "filters": Immutable.Map {
      "integrations": Immutable.List [
        5,
      ],
    },
    "type": "MERGE_STATS_FILTERS",
  },
]
`;

exports[`IntegrationsStatsFilter should not render missing integrations 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      2 integrations
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search integrations..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="label label quickSelectionOption"
          for="checkbox-1"
        >
          <input
            checked=""
            class="input"
            id="checkbox-1"
            name="checkbox-1"
            type="checkbox"
          />
          Deselect all
          <div
            class="badge badge--unselect"
          >
            2
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-2"
        >
          <input
            checked=""
            class="input"
            id="checkbox-2"
            name="checkbox-2"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            http
          </i>
           Slack Webhook
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-3"
        >
          <input
            checked=""
            class="input"
            id="checkbox-3"
            name="checkbox-3"
            type="checkbox"
          />
          <img
            alt="logo-gmail"
            class="integrationIcon"
            src="test-file-stub"
          />
           Acme Billing
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-4"
        >
          <input
            class="input"
            id="checkbox-4"
            name="checkbox-4"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            http
          </i>
           Backoffice Integration 2
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-5"
        >
          <input
            class="input"
            id="checkbox-5"
            name="checkbox-5"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            http
          </i>
           Backoffice Integration
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-6"
        >
          <input
            class="input"
            id="checkbox-6"
            name="checkbox-6"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
           Acme Support
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-7"
        >
          <input
            class="input"
            id="checkbox-7"
            name="checkbox-7"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
           Acme Contact
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-8"
        >
          <input
            class="input"
            id="checkbox-8"
            name="checkbox-8"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
           Acme Unverified
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-9"
        >
          <input
            class="input"
            id="checkbox-9"
            name="checkbox-9"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            phone
          </i>
           Acme Phone
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label label labelItem"
          for="checkbox-10"
        >
          <input
            class="input"
            id="checkbox-10"
            name="checkbox-10"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            chat
          </i>
           Chitty chatty
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`IntegrationsStatsFilter should render icon for aircall integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-11"
>
  <input
    class="input"
    id="checkbox-11"
    name="checkbox-11"
    type="checkbox"
  />
  <img
    alt="logo-aircall"
    class="integrationIcon"
    src="test-file-stub"
  />
   aircall integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for email integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-18"
>
  <input
    class="input"
    id="checkbox-18"
    name="checkbox-18"
    type="checkbox"
  />
  <i
    class="icon material-icons icon"
  >
    email
  </i>
   email integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for facebook integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-19"
>
  <input
    class="input"
    id="checkbox-19"
    name="checkbox-19"
    type="checkbox"
  />
  <i
    class="icon material-icons icon"
  >
    facebook
  </i>
   facebook integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for gmail integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-12"
>
  <input
    class="input"
    id="checkbox-12"
    name="checkbox-12"
    type="checkbox"
  />
  <img
    alt="logo-gmail"
    class="integrationIcon"
    src="test-file-stub"
  />
   gmail integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for gorgias_chat integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-22"
>
  <input
    class="input"
    id="checkbox-22"
    name="checkbox-22"
    type="checkbox"
  />
  <i
    class="icon material-icons icon"
  >
    chat
  </i>
   gorgias_chat integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for http integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-20"
>
  <input
    class="input"
    id="checkbox-20"
    name="checkbox-20"
    type="checkbox"
  />
  <i
    class="icon material-icons icon"
  >
    http
  </i>
   http integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for outlook integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-13"
>
  <input
    class="input"
    id="checkbox-13"
    name="checkbox-13"
    type="checkbox"
  />
  <img
    alt="logo-outlook"
    class="integrationIcon"
    src="test-file-stub"
  />
   outlook integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for phone integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-21"
>
  <input
    class="input"
    id="checkbox-21"
    name="checkbox-21"
    type="checkbox"
  />
  <i
    class="icon material-icons icon"
  >
    phone
  </i>
   phone integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for shopify integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-14"
>
  <input
    class="input"
    id="checkbox-14"
    name="checkbox-14"
    type="checkbox"
  />
  <img
    alt="logo-shopify"
    class="integrationIcon"
    src="test-file-stub"
  />
   shopify integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for smooch integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-15"
>
  <input
    class="input"
    id="checkbox-15"
    name="checkbox-15"
    type="checkbox"
  />
  <img
    alt="logo-smooch"
    class="integrationIcon"
    src="test-file-stub"
  />
   smooch integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for smooch_inside integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-16"
>
  <input
    class="input"
    id="checkbox-16"
    name="checkbox-16"
    type="checkbox"
  />
  <img
    alt="logo-smooch_inside"
    class="integrationIcon"
    src="test-file-stub"
  />
   smooch_inside integration
</label>
`;

exports[`IntegrationsStatsFilter should render icon for zendesk integration 1`] = `
<label
  class="label label labelItem"
  for="checkbox-17"
>
  <input
    class="input"
    id="checkbox-17"
    name="checkbox-17"
    type="checkbox"
  />
  <img
    alt="logo-zendesk"
    class="integrationIcon"
    src="test-file-stub"
  />
   zendesk integration
</label>
`;

exports[`IntegrationsStatsFilter should replace the item when isMultiple is set to false 1`] = `
Array [
  Object {
    "filters": Immutable.Map {
      "integrations": Immutable.List [
        5,
      ],
    },
    "type": "MERGE_STATS_FILTERS",
  },
]
`;
